# bootcamp-python-6-10

./: .flake8  .pre-commit-config.yaml  README.md  aula7_calculadoray.py  aula7_etl.py  aula7_main.py  aula8_etl.py  aula8_pipeline.py  dados.csv  main.py  pyproject.toml  vendas_aula7.csv
aula8_dados/: coleta2.json  colete1.json
