[tool.poetry]
name = "bootcamp-python-6-10"
version = "0.1.0"
description = ""
authors = ["dolivmorais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
