[tool.poetry]
name = "bootcamp-python-6-10"
version = "0.1.0"
description = ""
authors = ["dolivmorais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
taskipy = "^1.13.0"
pre-commit = "^3.8.0"
black = "^24.4.2"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"